testsuite/tests/typecheck/should_fail/tcfail017.alan
expression_by_reference() : proc
  b : byte[10];
  i : int;
  foo(b : reference byte[], i : reference int, c : reference byte) : proc
  { i = 3; }
{
  foo(b, i, b[2]);
  foo("ilias", 41+1, 'a');
  foo(b[0], i, 'i');
}
